--- a/resumeLand/vishvasVasukiCV.tex
+++ b/resumeLand/vishvasVasukiCV.tex
@@ -1,5 +1,5 @@
 \documentclass[biblist]{article}
-\input{../work/packages}
+\input{packages}
 \usepackage[empty]{fullpage}
 \usepackage{microtype} % Full justification
 \usepackage{natbib}
@@ -57,9 +57,9 @@
 
 \begin{tabular*}{\columnwidth}{@{}l@{\extracolsep{\fill}}r@{}}
 \parbox{2in}{\footnotesize \textbf{Address} Mountain View, CA, USA\\
-\small Web: \url{http://bit.ly/vvasuki}\\} & 
+\small \url{https://vvasuki.github.io/}\\} &
 \parbox{3in}{\footnotesize Email: vishvas.vasuki [\ae{}] gmail.com\\
-Phone: +1 $2^9$ 524 6901\\
+%Phone: +1 $2^9$ 524 6901\\
 }
 \end{tabular*}
 
@@ -115,11 +115,22 @@ Computing Profession And Society, Management in Engineering.
 \bibliography{proceedings}
 
 \section{Research}
+\resheading{\href{}{Sanskrit and Hindu community}}
+{}
+{Independent Researcher}
+{2011 to present}
+Sanskrit language processing.
+\begin{itemize}
+\headeditem{} \href{https://sanskrit-coders.github.io/site/}{Started} various \href{https://github.com/sanskrit-coders/}{Sanskrit Natural Language Processing projects}. \textit{Language}: Scala, Java, Python.
+\headedsubitem{Highlights} Published several sanskrit dictionaries, created a mobile app to conveniently install them.
+\headeditem{}Software for early research, minor contributions: See \href{https://github.com/vvasuki}{github}. \textit{Language}: Matlab, R, Java.
+\end{itemize}
+
 \resheading{\href{}{MIT-SVS}}
 {}
 {Researcher}
-{Apr 2017 to present}
-Sanskrit language processing
+{Apr 2017 to Mar 2018}
+Sanskrit language processing.
 
 \resheading{\href{http://www.honda-ri.com/HRI_Us/}{Honda Research Institute USA} via TriCom Quest}
 {Mountain View, CA}
@@ -201,16 +212,6 @@ Tuning belief tracking system. Assisted with demostrating this complex system on
 We wrote a fast spreadsheet program using VB which worked with both XML and Excel formats. This software also prevented cyclical reference of cells in arithmetic formulae.
 
 \end{comment}
-
-\section{Code samples/ Open Source projects}
-\begin{itemize}
-\headeditem{} \href{http://sanskritnlp.appspot.com/}{Started} various \href{https://github.com/sanskrit-coders/}{Sanskrit Natural Language Processing projects}. \textit{Language}: Scala, Java, Python.
-\headedsubitem{Highlights} Published several sanskrit dictionaries, created a mobile app to conveniently install them.
-\headeditem{} \href{https://bitbucket.org/vvasuki/bootpos}{Part of speech} tagging bootstrapped with wiktionary. \textit{Language}: Scala
-\headeditem{}Minor contributions to  \href{https://sourceforge.net/projects/parallelcolt/}{ParallelColt} (An efficient scientific computing library in Java). 
-\headeditem{}Software for early research: See  \href{sites.google.com/site/vishvasvasuki/}{website}. \textit{Language}: Matlab, R.
-\end{itemize}
-
 
 \section{Technical Skills}
 \begin{itemize}
