--- a/resumeLand/vishvasVasukiCV.tex
+++ b/resumeLand/vishvasVasukiCV.tex
@@ -64,13 +64,12 @@
 \end{tabular*}
 
 % \begin{resume}
+
 \begin{comment}
- 
-\section{Summary} 
+\section{Summary}
 \begin{itemize}
- \item \textbf{As a researcher}: Interest and academic experience in analysis and applications of statistical inference algorithms, Theoretical computer science.
- \item \textbf{As a data analyst}: Worked on problems of commercial and scientific interest.
- \item \textbf{As software engineer}: Proven skills in development, team-work and oral /written communication.
+ \item \textbf{As a researcher, tool-builder, publisher}: Interest and past work in Sanskrit natural language processing.
+ \item \textbf{As software engineer}: Rich experience as a software engineer at top companies.
 \end{itemize}
 \end{comment}
 
@@ -79,19 +78,21 @@
 \vspace{-16pt}
 \section{Formal Education}
 \resheading{\href{http://www.cs.utexas.edu}{University of Texas Austin}}{Computer Science}{MS with GPA 3.7.}{Dec, 2010}
+\begin{comment}
 \begin{itemize}
  \item \textit{Relevant coursework:} \href{http://www.cs.utexas.edu/~klivans/colt08.html}{Computational Learning Theory}, \href{http://www.cs.utexas.edu/users/inderjit/courses/cs383c_2008/}{Numerical Analysis: Linear Algebra},  \href{http://users.ece.utexas.edu/~sanghavi/spring2010_course.pdf}{Sparsity Structure and Algorithms}, \href{http://www.cs.utexas.edu/~plaxton/c/388r/index.html}{Randomized Algorithms}, Nonlinear Programming, \href{http://www.cs.utexas.edu/users/inderjit/courses/dm2009/}{Data Mining}.
 \end{itemize}
+\end{comment}
 
 \begin{comment}
-% \href{http://vishvas-vasuki.appspot.com/images/documents/utexasDegreeChkPhD.pdf}{\textit{Courses taken for credit\\}} 
-% \href{http://www.cs.utexas.edu/users/panni/cs388T.html}{Theory of Computation}, 
+% \href{http://vishvas-vasuki.appspot.com/images/documents/utexasDegreeChkPhD.pdf}{\textit{Courses taken for credit\\}}
+% \href{http://www.cs.utexas.edu/users/panni/cs388T.html}{Theory of Computation},
 %  \href{http://www.cs.utexas.edu/~bwaters/classes/cs395t-spring09/}{Advanced Cryptography}, \href{http://www.cs.utexas.edu/~acharya/}{Distributed Computing}.
-% 
+%
 % \textit{Courses audited\\}
-% \href{http://math.utexas.edu/users/henrys/m365c.html} {Real Analysis 1}, \href{http://ssc.utexas.edu/worddocs/Duthie_M378K_Syllabus.pdf} {Introduction to Mathematical Statistics}, 
+% \href{http://math.utexas.edu/users/henrys/m365c.html} {Real Analysis 1}, \href{http://ssc.utexas.edu/worddocs/Duthie_M378K_Syllabus.pdf} {Introduction to Mathematical Statistics},
 % \href{http://www.cs.utexas.edu/~pradeepr/courses/395T-LT/}{Learning Theory}.
- 
+
 \end{comment}
 
 \resheading{\href{http://www.vtu.ac.in}{Vishveshvariah Technological University}, India}{Computer Science and Engineering}{BE. \textit{First class with distinction.}}{Jul, 2003}
@@ -111,7 +112,7 @@ Computing Profession And Society, Management in Engineering.
 \renewcommand{\bibsection}{}
 \setlength{\bibsep}{0pt}
 \verb' '\nocite{*}
-\bibliographystyle{unsrtnat} 
+\bibliographystyle{unsrtnat}
 \bibliography{proceedings}
 
 \section{Research}
@@ -120,11 +121,9 @@ Computing Profession And Society, Management in Engineering.
 {Independent Researcher}
 {2011 to present}
 Sanskrit language processing.
-\begin{itemize}
-\headeditem{} \href{https://sanskrit-coders.github.io/site/}{Started} various \href{https://github.com/sanskrit-coders/}{Sanskrit Natural Language Processing projects}. \textit{Language}: Scala, Java, Python.
-\headedsubitem{Highlights} Published several sanskrit dictionaries, created a mobile app to conveniently install them.
-\headeditem{}Software for early research, minor contributions: See \href{https://github.com/vvasuki}{github}. \textit{Language}: Matlab, R, Java.
-\end{itemize}
+\textit{Highlights (Core):} Published several indic language stardict dictionaries, a mobile app to conveniently install them. An easy to use audio podcasting service. Libraries for audio and video curation. Indic transliteration modules (scala, python). The Jekyll sanskrit-documentation-theme.
+\textit{Highlights (Secondary):} Open source Jyotisha library, sanskrit\_parser (scraped data), m17n transliteration library.
+Consolidated the \textit{open source \href{https://sanskrit-coders.github.io/site/}{Sanskrit programming community}} with an active mailing list.
 
 \resheading{\href{}{MIT-SVS}}
 {}
@@ -220,6 +219,7 @@ We wrote a fast spreadsheet program using VB which worked with both XML and Exce
 \headeditem{Past Experience:}
 \small{
 Matlab, R, \LaTeX, C, C\#, VB, C++, 8086 assembly language, NesC/ TinyOS, JSP, Rational Rose, SQL, E-Matrix's PLM suite, JavaScript, PERL. \textbf{Web-server environments:}  Apache, Weblogic, Websphere, Tomcat. \textbf{Frameworks and standards:}  log4j, XML, CSS, JUNIT, ANT.}
+\headeditem{Code samples} See github repos under \href{https://github.com/vvasuki}{vvasuki}, \href{https://github.com/sanskrit-coders}{sanskrit-coders}.
 \end{itemize}
 
 \section{Honors and Scholastic achievements}
@@ -227,8 +227,8 @@ Matlab, R, \LaTeX, C, C\#, VB, C++, 8086 assembly language, NesC/ TinyOS, JSP, R
 \headeditem{Merit scholarship} \small{from the State Bank of Mysore. \emph{Microelectronics and Computer Development Fellowship} UT 2007 (Declined). \emph{Deans Excellence Award} UT 2007 (Declined).}
 
 \headeditem{Standardised tests:}
-\headedsubitem{GRE 09/2011} \small{Verbal: \textbf{170/170}, Quant: \textbf{166}. Analytical Writing: \textbf{4.5/6}\tiny{ - 99, 94, 72-th \%iles.}} 
-\headedsubitem{GRE 07/2006} \small{Verbal, Quant: \textbf{800/800}. Analytical Writing: \textbf{5.5/6}. \tiny{ -99, 94, 96th \%iles.}} 
+\headedsubitem{GRE 09/2011} \small{Verbal: \textbf{170/170}, Quant: \textbf{166}. Analytical Writing: \textbf{4.5/6}\tiny{ - 99, 94, 72-th \%iles.}}
+\headedsubitem{GRE 07/2006} \small{Verbal, Quant: \textbf{800/800}. Analytical Writing: \textbf{5.5/6}. \tiny{ -99, 94, 96th \%iles.}}
 % \headedsubitem{TOEFL CBT test - 2006: 300/300}
 \headedsubitem{Computer Science GATE 2007: 99th percentile [Rank 181]} \footnote{This annual national level exam tests computer science knowledge in over 17,000 (in 2007) candidates to help postgraduate admissions. }
 \item \emph{madhyamA} in Sanskrit and Hindi.
@@ -239,10 +239,11 @@ Matlab, R, \LaTeX, C, C\#, VB, C++, 8086 assembly language, NesC/ TinyOS, JSP, R
 {Department of Computer Sciences}
 {Teaching Assistant}
 {Jan 2008 to Dec 2010}
-My duties have included grading, making grading rubrics, proctoring exams, holding office hours and leading discussion sections. I was TA for the following courses: 
+My duties have included grading, making grading rubrics, proctoring exams, holding office hours and leading discussion sections. I was TA for the following courses:
 \textit{Learning Theory}(\href{http://www.cs.utexas.edu/~pradeepr/courses/395T-LT/}{CS395T}), Fall '10. \textit{Numerical Analysis: Linear Algebra}(\href{http://www.cs.utexas.edu/\%7Ecline/CS383C/}{CS383C}), Fall '09. \textit{Contemporary issues in Computer Science} (\href{http://www.cs.utexas.edu/~ear/cs349/index.html}{CS349}), Spr '09. \textit{Analysis of Programs} (\href{http://www.cs.utexas.edu/\%7Ecline/CS336/}{CS336}), Fall '08. \textit{Foundations of Computer Science} (\href{http://www.cs.utexas.edu/~scottm/cs307/}{CS307}), Spr '08.
 
 
+\begin{comment}
 \section{Talks}
 \begin{itemize}
 \item \href{https://raw.githubusercontent.com/vvasuki/notes/master/graphTheory/communityRecommendation/talkNaga/affiliationRecommendation.pdf}{Affiliation recommendation using auxiliary social networks}, RPE, Fall 2010, UT Austin.
@@ -250,7 +251,6 @@ My duties have included grading, making grading rubrics, proctoring exams, holdi
 \item \href{https://raw.githubusercontent.com/vvasuki/notes/master/linAlg/exposition/kyFanNorms/kyFanNorms.pdf}{Ky Fan (p, k) norms}, April 2009, Data mining lab, UT Austin.
 \end{itemize}
 
-% \begin{comment}
 \section{Service and Membership in Professional Societies}
 \begin{itemize}
 \headeditem{SIAM: Society for Industrial and Applied Mathematics} Fall 2008 to Fall 2010.
@@ -262,12 +262,12 @@ My duties have included grading, making grading rubrics, proctoring exams, holdi
 \headeditem{University of Texas Graduate Student Assembly}: Administrative officer. Summer 2009 to 2010.
 
 \end{itemize}
-% \end{comment}
+\end{comment}
 
 
 \section{Personal Details}
 \begin{itemize}
-\headeditem{Avocation:} Sanskrit, Poetry, shAstra, Nature, Hiking, Socio-cultural discourse.
+\headeditem{Avocation:} Sanskrit, Poetry, shAstra, Nature, Hiking, Vedic conservativism.
 \headeditem{Human languages:} English, Spoken samsk.rta, kannaDa, hebbAr tamiL, hindI.
 \headeditem{Citizenship:} India.
 \end{itemize}
@@ -277,7 +277,6 @@ My duties have included grading, making grading rubrics, proctoring exams, holdi
 \section{References}
 \begin{itemize}
 \item Nobuyuki Morioka, Charlie Curry Google.
-\item \href{http://www.cs.cmu.edu/~antoine/}{Antoine Raux}, Scientist, Honda Research Institute.
 \item \href{http://www.linkedin.com/in/venumoram}{Venugopala Rao Moram}, Senior SDE, Microsoft, WA. Email: venugopala.moram [\ae{}] microsoft.com
 \item \href{http://www.linkedin.com/pub/manoj-thomas/7/29/81a}{Manoj Thomas}, Principle member of Technical Staff, Oracle, CA. Email: manojpt [\ae{}] gmail.com
 \item \href{http://www.linkedin.com/pub/zhengdong-lu/0/167/ab4}{Zhengdong Lu}, Researcher, Microsoft Research Asia, Beijing. Email: lzhengdong [\ae{}] gmail.com, zhengdol [\ae{}] microsoft.com
