--- a/resumeLand/proceedings.bib
+++ b/resumeLand/proceedings.bib
@@ -7,23 +7,10 @@
   booktitle = {JMLR Workshop and Conference Proceedings: AISTATS 2011},
   year = {2011},
   volume = {15},
-  note = {\href{http://vishvas-vasuki.appspot.com/work/probabilisticModels/discreteGraphicalModelLearning/aistats2011/dgm_aistats.pdf}{pdf},
-	\href{http://vishvas-vasuki.appspot.com/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vvasuki.github.io/notes/math/probabilisticModels/discreteGraphicalModelLearning/aistats2011/dgm_aistats.pdf}{pdf},
+	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
   owner = {vvasuki},
   timestamp = {2010.11.01}
-}
-
-@ARTICLE{wsnIIsc10,
-  author = {SmartDetect Project Team},
-  title = {Wireless Sensor Networks for human intruder detection},
-  journal = {Journal of the Indian Institute of Science},
-  year = {2010},
-  volume = {Vo. 90, No. 3},
-  pages = {pp. 347-380.},
-  note = {\href{http://vishvas-vasuki.appspot.com/work/computerNetworks/drdo_wsn_iisc_journal.pdf}{pdf},
-	\href{http://vishvas-vasuki.appspot.com/resumeLand/proceedings.bib}{bib}},
-  owner = {vvasuki},
-  timestamp = {2011.02.21}
 }
 
 @INPROCEEDINGS{vasukiAffiliationRec,
@@ -34,8 +21,8 @@
 	systems},
   year = {2010},
   address = {Barcelona, Spain},
-  note = {\href{http://vishvas-vasuki.appspot.com/work/graphTheory/communityRecommendation/paper/groupRecommendation.pdf}{pdf},
-	\href{http://vishvas-vasuki.appspot.com/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vvasuki.github.io/notes/math/graphTheory/communityRecommendation/paper/groupRecommendation.pdf}{pdf},
+	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
   location = {Barcelona, Spain},
   owner = {vvasuki}
 }
@@ -47,9 +34,20 @@
   journal = {ACM Transactions on Intelligent Systems and Technology special issue
 	on Social Recommender Systems},
   year = {2011},
-  note = {\href{http://vishvas-vasuki.appspot.com/work/graphTheory/communityRecommendation/journalPaper/groupRecommendation.pdf}{pdf},
-	\href{http://vishvas-vasuki.appspot.com/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vvasuki.github.io/notes/graphTheory/communityRecommendation/journalPaper/groupRecommendation.pdf}{pdf},
+	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
   location = {Barcelona, Spain},
   owner = {vvasuki}
 }
 
+@ARTICLE{wsnIIsc10,
+  author = {SmartDetect Project Team},
+  title = {Wireless Sensor Networks for human intruder detection},
+  journal = {Journal of the Indian Institute of Science},
+  year = {2010},
+  volume = {Vo. 90, No. 3},
+  pages = {pp. 347-380.},
+  note = {\href{http://vvasuki.github.io/notes/math/communication/computerNetworks/drdo_wsn_iisc_journal.pdf}{pdf},
+	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
+  owner = {vvasuki},
+}
