--- a/resumeLand/vishvasVasukiCV.tex
+++ b/resumeLand/vishvasVasukiCV.tex
@@ -129,7 +129,7 @@ Consolidated the \textit{open source \href{https://sanskrit-coders.github.io/sit
 {}
 {Researcher}
 {Apr 2017 to Mar 2018}
-Sanskrit language processing.
+Sai's "Vedavaapi" initiative: "ullekhanam" (text and image annotation), "vyakarana" (sanskrit grammar) projects.
 
 \resheading{\href{http://www.honda-ri.com/HRI_Us/}{Honda Research Institute USA} via TriCom Quest}
 {Mountain View, CA}
