--- a/static/resumeLand/proceedings.bib
+++ b/static/resumeLand/proceedings.bib
@@ -7,8 +7,8 @@
   booktitle = {JMLR Workshop and Conference Proceedings: AISTATS 2011},
   year = {2011},
   volume = {15},
-  note = {\href{http://vvasuki.github.io/notes/math/probabilisticModels/discreteGraphicalModelLearning/aistats2011/dgm_aistats.pdf}{pdf},
-	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vishvAsa.github.io/notes/math/probabilisticModels/discreteGraphicalModelLearning/aistats2011/dgm_aistats.pdf}{pdf},
+	\href{http://vishvAsa.github.io/resumeLand/proceedings.bib}{bib}},
   owner = {vvasuki},
   timestamp = {2010.11.01}
 }
@@ -21,8 +21,8 @@
 	systems},
   year = {2010},
   address = {Barcelona, Spain},
-  note = {\href{http://vvasuki.github.io/notes/math/graphTheory/communityRecommendation/paper/groupRecommendation.pdf}{pdf},
-	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vishvAsa.github.io/notes/math/graphTheory/communityRecommendation/paper/groupRecommendation.pdf}{pdf},
+	\href{http://vishvAsa.github.io/resumeLand/proceedings.bib}{bib}},
   location = {Barcelona, Spain},
   owner = {vvasuki}
 }
@@ -34,8 +34,8 @@
   journal = {ACM Transactions on Intelligent Systems and Technology special issue
 	on Social Recommender Systems},
   year = {2011},
-  note = {\href{http://vvasuki.github.io/notes/graphTheory/communityRecommendation/journalPaper/groupRecommendation.pdf}{pdf},
-	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vishvAsa.github.io/notes/graphTheory/communityRecommendation/journalPaper/groupRecommendation.pdf}{pdf},
+	\href{http://vishvAsa.github.io/resumeLand/proceedings.bib}{bib}},
   location = {Barcelona, Spain},
   owner = {vvasuki}
 }
@@ -47,7 +47,7 @@
   year = {2010},
   volume = {Vo. 90, No. 3},
   pages = {pp. 347-380.},
-  note = {\href{http://vvasuki.github.io/notes/math/communication/computerNetworks/drdo_wsn_iisc_journal.pdf}{pdf},
-	\href{http://vvasuki.github.io/resumeLand/proceedings.bib}{bib}},
+  note = {\href{http://vishvAsa.github.io/notes/math/communication/computerNetworks/drdo_wsn_iisc_journal.pdf}{pdf},
+	\href{http://vishvAsa.github.io/resumeLand/proceedings.bib}{bib}},
   owner = {vvasuki},
 }
