--- a/static/resumeLand/vishvasVasukiCV.tex
+++ b/static/resumeLand/vishvasVasukiCV.tex
@@ -57,7 +57,7 @@
 
 \begin{tabular*}{\columnwidth}{@{}l@{\extracolsep{\fill}}r@{}}
 \parbox{2in}{\footnotesize \textbf{Address} Mountain View, CA, USA\\
-\small \url{https://vvasuki.github.io/}\\} &
+\small \url{https://vishvAsa.github.io/}\\} &
 \parbox{3in}{\footnotesize Email: vishvas.vasuki [\ae{}] gmail.com\\
 %Phone: +1 $2^9$ 524 6901\\
 }
